2002-05-02  Andrew Csillag  <drew@localhost.localdomain>

	* FAQ: added entry about path info

	* SkunkWeb/Services/web/protocol.py(HTTPConnection._initArgs):
	made it so that:

	1) empty form arguments are passed through.  Previously, they were
	   dropped, but it generally wasn't a problem since you usually
	   used <:args:> or CONN.args.get(foo), but occasionally it was
	   confusing.
	
	2) on a POST request, we now also gather what would usually be GET
	   arguments also (say your form action is /foo/bar.html?baz=fred
	   and it was a POST, you'll now get the baz argument (set to
	   fred, of course))

2002-05-01  Jacob Smullyan  <jsmullyan@wnyc.org>

	* SkunkWeb/Services/rewrite.py (_dorewrite): fixed typo.

2002-04-29  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/sw.conf.in: removed part where you specified the
	password slot for the PlainSessionAuth authorizer since we don't
	do that anymore.

	* SkunkWeb/Services/auth/__init__.py: added more documentation in
	the comment describing authorizer objects as well as did a few
	grammar/spelling/capitalization fixes.

	The SessionAuthBase also no longer stores the password in the
	session.  That was pretty stupid.  If somebody actually wants
	that, they can do it themselves.

	* SkunkWeb/sw.conf.in: removed cookieauth stuff, added auth stuff

	* configure, configure.in: removed cookieauth stuff, added auth
	stuff
	
	* SkunkWeb/configure, SkunkWeb/configure.in: removed cookieauth 
	stuff, added auth stuff

	* SkunkWeb/Services/auth/{login.html,__init__.py,logout.html}:
	added new auth service

	* SkunkWeb/Services/cookieauth: whole directory removed.
	Superceded by new auth service which is now the swiss army knife
	of web authentication.

2002-04-27  Andrew Csillag  <drew@localhost.localdomain>

	* SkunkWeb/Services/cookieauth/__init__.py: cleaned up so that you
	can provide arbitrary authenticator info that only somewhat cookie
	related???

2002-04-27  Jacob Smullyan  <smulloni@smullyan.org>
